@@ -5,6 +5,7 @@ ART 2.3.1
 * Fix to enable display of friendly parameter values for chained parameters
 * Modified string for chained multi parameter, all values, from ":: All items" to "All"
 * Fix for error on selecting all values option for chained multi parameter
+* Removed check enforcing presence of parameter label in the sql source
 
 ART 2.3
 * Added database type drop down field to help populate common jdbc details
